# django-ads

./: MANIFEST.in  README.rst  setup.cfg
ads/locale/es/LC_MESSAGES/: django.po
