[metadata]
name = django-ads
author = Razi Alsayyed
summary = Ads Management System for Django Framework
description-file = README.rst
license-file = LICENSE
home-page = https://github.com/razisayyed/django-ads
requires-python = >=3.5
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks

[wheel]
universal = 1
